scss/style.scss
/* ... */
.btn {
	cursor: pointer;
	text-align: center;
	white-space: nowrap;
	padding: 0;
}

select.btn {
	background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFAAAAAUCAAAAAA/s+ULAAAAAnRSTlMAAHaTzTgAAAA+SURBVHjarcyxDQAwCMAw//90UT9AItljb5l1tUftUXvUHrVH7VF71B61R+1Re9QetUftUXvUHrVH7X3xMA8B2qJs1mnhcwAAAABJRU5ErkJggg==);
	background-repeat: no-repeat;
	background-size: $s4 $s1;
	background-position: right center;
	text-align: left;
	padding-left: $s2;
	padding-right: $s6;
}

select.btn option {
	color: $color-text;
	background-color: $color-background;
}

.btn > span {
	padding: var(--button-padding) $s2 0;
}

.btn > span > f-icon {
	pointer-events: none;
}

.btn + .btn {
	margin-left: $s2;
}

.btn.square, .btn.square > span {
	width: var(--button-size);
}

.btn.square > span {
	padding-left: 0;
	padding-right: 0;
}

.btn,
.f-slider-thumb {
	color: $color-text-on-blue;
	background-color: $color-blue;
}

// Adding this to the group above makes the entire group stop working in Firefox
.scrollable::-webkit-scrollbar-thumb {
	background-color: $color-blue;
}

@for $i from 1 through 7 {
	.#{list.nth($color-names, $i)} {
		color: list.nth($colors, $i);
	}

	.btn.#{list.nth($color-names, $i)} {
		color: list.nth($colors-on-text, $i);
		background-color: list.nth($colors, $i);
	}
}

.btn.transparent {
	color: $color-text;
	background-color: transparent;
}

.btn:hover,
.btn:focus,
.f-slider-container:hover .f-slider-thumb {
	background-color: $color-blue-hover;
}

// Adding this to the group above makes the entire group stop working in Firefox
.scrollable::-webkit-scrollbar-thumb:hover {
	background-color: $color-blue-hover;
}

.scrollable::-webkit-scrollbar-corner {
	background-color: $color-background;
}

// Although it would be way simpler to just add a (hover: hover) query adding
// the hover effect to the elements, it would sacrifice many desktop browsers that
// do not support this query... Therefore, I thought it would be better to do the
// opposite, and disable the hover effect when it is not desirable...
//
// https://drafts.csswg.org/mediaqueries-4/#hover
@media (pointer: coarse) {
	.btn:hover,
	.f-slider-container:hover .f-slider-thumb {
		background-color: $color-blue;
	}

	// Adding this to the group above makes the entire group stop working in Firefox
	.scrollable::-webkit-scrollbar-thumb:hover {
		background-color: $color-blue;
	}
}

.btn:active,
.f-slider-container.active:hover .f-slider-thumb,
.f-slider-container.active .f-slider-thumb {
	background-color: $color-blue-active;
}

// Adding this to the group above makes the entire group stop working in Firefox
.scrollable::-webkit-scrollbar-thumb:active {
	background-color: $color-blue-active;
}

@for $i from 1 through 7 {
	.btn.#{list.nth($color-names, $i)}:focus,
	.btn.#{list.nth($color-names, $i)}:hover {
		color: list.nth($colors-on-text, $i);
		background-color: list.nth($colors-hover, $i);
	}
	
	@media (pointer: coarse) {
		.btn.#{list.nth($color-names, $i)}:hover {
			background-color: list.nth($colors, $i);
		}
	}
	
	.btn.#{list.nth($color-names, $i)}:active {
		color: list.nth($colors-on-text, $i);
		background-color: list.nth($colors-active, $i);
	}
}

.btn.transparent:hover > span > f-icon,
.btn.transparent:focus > span > f-icon,
.btn.transparent:active > span > f-icon {
	color: inherit;
}

@media (pointer: coarse) {
	.btn.transparent:hover:not(:active):not(:focus) {
		background-color: transparent;
	}

	.btn.transparent:hover:not(:active):not(:focus) > span > f-icon.blue {
		color: $color-blue;
	}

	@for $i from 1 through 7 {
		.btn.transparent.#{list.nth($color-names, $i)}:hover:not(:active):not(:focus) {
			color: $color-text;
		}

		.btn.transparent:hover:not(:active):not(:focus) > span > f-icon.#{list.nth($color-names, $i)} {
			color: list.nth($colors, $i);
		}
	}
}

f-slider {
	display: inline-block;
	touch-action: none;
}

f-slider:not(.vertical) {
	height: var(--button-size);
}

f-slider.vertical {
	width: var(--button-size);
}

.f-slider-focus-container {
	display: inline-flex;
	flex-wrap: nowrap;
	align-items: center;
	width: 100%;
	height: 100%;
}

.f-slider-focus-container:not(.vertical) {
	flex-direction: row;
	padding: var(--button-padding) 0;
}

.f-slider-focus-container.vertical {
	flex-direction: column-reverse;
	padding: 0 var(--button-padding);
}

.f-slider-container {
	display: inline-block;
	position: relative;
	flex: 1 1 auto;
	z-index: 0;
}

.f-slider-container:not(.vertical) {
	height: $contents-size;
	padding: 0 $slider-internal-unit 0 0;
}

.f-slider-container.vertical {
	width: $contents-size;
	// padding: $slider-internal-unit 0 0 0; // See comment below
	padding: 0;
}

.f-slider-inner-container, .f-slider-extra-child {
	display: inline-block;
	position: relative;
	pointer-events: none;
}

.f-slider-inner-container:not(.vertical) {
	height: $contents-size;
	width: 100%;
}

.f-slider-inner-container.vertical {
	width: $contents-size;
	// height: 100%; // Safari 13 does not like this...
	position: absolute;
	top: $slider-internal-unit;
	left: 0;
	bottom: 0;
}

.f-slider-filled-ruler,
.f-slider-ruler {
	display: block;
	position: absolute;
	z-index: -1;
}

.f-slider-filled-ruler:not(.vertical),
.f-slider-ruler:not(.vertical) {
	top: $slider-internal-unit;
	height: $slider-internal-unit;
}

.f-slider-filled-ruler.vertical,
.f-slider-ruler.vertical {
	left: $slider-internal-unit;
	width: $slider-internal-unit;
}

.f-slider-filled-ruler:not(.vertical) {
	left: 0;
}

.f-slider-filled-ruler.vertical {
	bottom: 0;
}

.f-slider-ruler:not(.vertical) {
	right: -#{$slider-internal-unit};
}

.f-slider-ruler.vertical {
	top: -#{$slider-internal-unit};
}

.f-slider-thumb {
	display: block;
	position: absolute;
	z-index: 1;
}

.f-slider-thumb:not(.vertical) {
	top: 0;
	height: $contents-size;
	width: $slider-internal-unit;
}

.f-slider-thumb.vertical {
	left: 0;
	width: $contents-size;
	height: $slider-internal-unit;
}
/* ... */

